<resources>
    <string name="app_name">Metus Video Controller</string>
    <string name="action_settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="connect">REFRESH</string>
    <string name="title_activity_settings">Settings</string>

    <string name="close">Close</string>
    <string name="visit_us">Visit Us</string>
    <string name="messages">Messages:</string>
    <string name="enter_ip_adress">IP Address:</string>
    <string name="set_port_number">Port Number:</string>
    <string name="enter_the_encoder_name">Encoder Name:</string>
    <string name="save">Save</string>
    <string name="encoder_status">Encoder # Status:</string>
    <string name="status">%1$s Status:</string>
    <string name="title_activity_about">About</string>
    <string name="about_content">Metus is a leading developer of file based management, transcoding and video capture solutions. Metus-powered solutions are now installed in 71 countries with more than 850 clients. You can find Metus in virtually every industry but not limited to: Broadcast Television Stations, House of Worship, Law Enforcement, Military, Entertainment, Judicial, Post Production, Medical, Government, Corporate, Education, Satellite, Internet.
        The Metus team of talented and broadcast engineers, software developers and network specialists are dedicated to deliver an easy to use, secure way to find and protect your media resources. Metus solutions allow you to focus on the creative job at hand. The company’s core products deliver next generation tools for recording, archiving, editing and distributing video, audio and images.</string>
</resources>
