<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.root.telnettest.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_web"
        android:orderInCategory="0"
        android:title="@string/visit_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="0"
        android:title="About Us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="0"
        android:title="@string/close"
        app:showAsAction="never"/>

</menu>
