<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.root.telnettest.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connect"
        android:text="@string/connect"
        android:textColor="@color/colorYellow"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundcorner"
        style="@style/Base.Widget.AppCompat.ActionButton"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/linear_layout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_start_rec"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:text="@string/start"
            android:scaleType="centerCrop"
            android:src="@drawable/play"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_pause_rec"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:text="@string/start"
            android:scaleType="centerCrop"
            android:src="@drawable/pause"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_split_rec"
            android:text="@string/stop"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/split"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_stop_rec"
            android:text="@string/stop"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/stop"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/encoder_status"
        android:textStyle="italic|bold"
        android:textSize="@dimen/dimen_text"
        android:text="@string/encoder_status" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/dimen_text"
        android:id="@+id/status_screen" />

</LinearLayout>
